# SPEC

./: CMakeLists.txt  README.md  basefn_8f90_a38dc596fb909186b01dacc1feac03164_icgraph.map  basefn_8f90_a38dc596fb909186b01dacc1feac03164_icgraph.md5  basefn_8f90_af6a4cad04c70bfb14fd18a3bfbc843a3_icgraph.map  basefn_8f90_af6a4cad04c70bfb14fd18a3bfbc843a3_icgraph.md5  citelist.html  compilation_instructions.md  dfp200_8f90_a55ea75395f8c71731451e1add3720c7e_cgraph.map  dfp200_8f90_a55ea75395f8c71731451e1add3720c7e_cgraph.md5  dfp200_8f90_a5e56f1f4b1e6df11a9cffa6237c37469_cgraph.map  dfp200_8f90_a5e56f1f4b1e6df11a9cffa6237c37469_cgraph.md5  dfp200_8f90_a6aca59cf350d7b1941f8389d50945a43_cgraph.map  dfp200_8f90_a6aca59cf350d7b1941f8389d50945a43_cgraph.md5  dfp200_8f90_a73ddf39ecc5228201fb643779e17cd36_cgraph.map  dfp200_8f90_a73ddf39ecc5228201fb643779e17cd36_cgraph.md5  dfp200_8f90_a7b64c7392b45d0042d8bd7379c0761a5_cgraph.map  dfp200_8f90_a7b64c7392b45d0042d8bd7379c0761a5_cgraph.md5  environment.yml  global_8f90.html  global_8f90.js  group__grp__conjugate__gradient_ga25a3bae2ff2ee0469b045de0d033398b_cgraph.map  group__grp__conjugate__gradient_ga25a3bae2ff2ee0469b045de0d033398b_cgraph.md5  group__grp__conjugate__gradient_ga4d8415226e62a9fdb42b0fd0b464251e_cgraph.map  group__grp__conjugate__gradient_ga4d8415226e62a9fdb42b0fd0b464251e_cgraph.md5  group__grp__diagnostics.html  group__grp__force__driver.html  group__grp__force__driver_ga8ccd6c7d901872702521d0a0edf95412_cgraph.map  group__grp__force__driver_ga8ccd6c7d901872702521d0a0edf95412_cgraph.md5  group__grp__free-boundary.html  (+50 more)
(+17 files in other folders)
